--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -5,11 +5,13 @@
     <item
         android:id="@+id/search"
         android:icon="@drawable/ic_action_search"
+        android:menuCategory="secondary"
         android:title="@string/search_events"
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/refresh"
         android:icon="@drawable/ic_action_refresh"
+        android:menuCategory="secondary"
         android:title="@string/refresh_events_db"
         app:showAsAction="ifRoom"/>
 
