Added TrackScheduleActivity and TrackScheduleFragment Fixed EventsParser: cannot recycle the ArrayList of persons and links because IterablePullParser uses 2 instances of Event simultaneously.

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -3,6 +3,7 @@
 
     <color name="main_menu_background">#f0fafafa</color>
     <color name="current_section_background">#29000000</color>
+    <color name="translucent_grey">#29000000</color>
     <color name="background_tab_pressed">#6633B5E5</color>
 
 </resources>
