--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <color name="fosdem_purple">#9c3381</color>
+    <color name="translucent_fosdem_purple">#dd9c3381</color>
     <color name="main_menu_background">#f0fafafa</color>
-    <color name="current_section_background">#29000000</color>
     <color name="translucent_grey">#29000000</color>
     <color name="background_tab_pressed">#6633B5E5</color>
 
