--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -2,4 +2,21 @@
 
     <style name="AppTheme" parent="@style/Theme.AppCompat.Light"></style>
 
+    <style name="HeaderStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginBottom">5dp</item>
+        <item name="android:paddingLeft">5dp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/fosdem_purple</item>
+    </style>
+
+    <style name="HeaderLineStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:layout_marginBottom">5dp</item>
+        <item name="android:background">@color/fosdem_purple</item>
+    </style>
+
 </resources>
