--- a/res/layout/fragment_tracks.xml
+++ b/res/layout/fragment_tracks.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
@@ -13,7 +14,8 @@
         <com.astuetz.PagerSlidingTabStrip
             android:id="@+id/indicator"
             android:layout_width="match_parent"
-            android:layout_height="48dp" />
+            android:layout_height="48dp"
+            app:pstsIndicatorColor="@color/fosdem_purple" />
 
         <android.support.v4.view.ViewPager
             android:id="@+id/pager"
