--- a/res/layout/item_link.xml
+++ b/res/layout/item_link.xml
@@ -4,5 +4,5 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/selectable_background"
-    android:padding="10dp"
-    android:textSize="16sp" />
+    android:padding="@dimen/list_item_padding"
+    android:textSize="@dimen/list_item_medium_text_size" />
