--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <dimen name="list_title_text_size">16sp</dimen>
+    <dimen name="main_menu_padding">15dp</dimen>
+    <dimen name="list_item_padding">8dp</dimen>
+    <dimen name="list_item_title_text_size">18sp</dimen>
+    <dimen name="list_item_medium_text_size">16sp</dimen>
+    <dimen name="list_item_small_text_size">14sp</dimen>
+    <dimen name="title_text_size">24sp</dimen>
+    <dimen name="subtitle_text_size">18sp</dimen>
+    <dimen name="content_margin">10dp</dimen>
 
 </resources>
