--- a/res/menu/event.xml
+++ b/res/menu/event.xml
@@ -3,6 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto" >
 
     <item
+        android:id="@+id/bookmark"
+        app:showAsAction="ifRoom"/>
+    <item
         android:id="@+id/share"
         android:icon="@drawable/ic_action_share"
         android:title="@string/share"
