--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Drawable used as a background for activated items. -->
+    <attr name="activatedBackgroundIndicator" format="reference" />
+
     <declare-styleable name="PagerSlidingTabStrip">
         <attr name="pstsIndicatorColor" format="color" />
         <attr name="pstsUnderlineColor" format="color" />
