--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -3,6 +3,7 @@
     <style name="AppTheme" parent="@style/Theme.AppCompat.Light">
         <item name="android:textViewStyle">@style/Fosdem.TextView</item>
         <item name="android:listViewStyle">@style/Fosdem.ListView</item>
+        <item name="activatedBackgroundIndicator">@drawable/activated_background</item>
     </style>
 
     <style name="Fosdem.TextView" parent="android:Widget.TextView">
