--- a/res/layout/fragment_map.xml
+++ b/res/layout/fragment_map.xml
@@ -3,5 +3,5 @@
     android:id="@+id/map"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scaleType="centerInside"
+    android:scaleType="fitCenter"
     android:src="@drawable/campusmap" />
