Added notifications system and settings screen. + Sorted strings

--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -14,5 +14,10 @@
         android:menuCategory="secondary"
         android:title="@string/update_events_db"
         app:showAsAction="ifRoom"/>
+    <item
+        android:id="@+id/settings"
+        android:menuCategory="secondary"
+        android:title="@string/settings"
+        app:showAsAction="never"/>
 
 </menu>
