Added custom animation when opening settings menu. Added settings icon and show it if there's room.

--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -16,8 +16,9 @@
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/settings"
+        android:icon="@drawable/ic_action_settings"
         android:menuCategory="secondary"
         android:title="@string/settings"
-        app:showAsAction="never"/>
+        app:showAsAction="ifRoom"/>
 
 </menu>
