--- a/res/layout/item_event.xml
+++ b/res/layout/item_event.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="?attr/activatedBackgroundIndicator"
     android:orientation="vertical"
     android:padding="@dimen/list_item_padding" >
 
