--- a/res/anim/zoom_in.xml
+++ b/res/anim/zoom_in.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="@android:integer/config_mediumAnimTime" >
+<set xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <scale
+        android:duration="@android:integer/config_mediumAnimTime"
         android:fromXScale="0.75"
         android:fromYScale="0.75"
         android:pivotX="50%"
@@ -11,6 +11,7 @@
         android:toYScale="1.0" />
 
     <alpha
+        android:duration="@android:integer/config_mediumAnimTime"
         android:fromAlpha="0.5"
         android:toAlpha="1.0" />
 
