--- a/res/anim/zoom_out.xml
+++ b/res/anim/zoom_out.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="@android:integer/config_mediumAnimTime" >
+<set xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <scale
+        android:duration="@android:integer/config_mediumAnimTime"
         android:fromXScale="1.0"
         android:fromYScale="1.0"
         android:pivotX="50%"
@@ -11,6 +11,7 @@
         android:toYScale="0.75" />
 
     <alpha
+        android:duration="@android:integer/config_mediumAnimTime"
         android:fromAlpha="1.0"
         android:toAlpha="0.5" />
 
