--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -50,4 +50,9 @@
         <item name="android:background">@color/fosdem_purple</item>
     </style>
 
+    <style name="RoomImageDialogAnimations">
+        <item name="android:windowEnterAnimation">@anim/zoom_in</item>
+        <item name="android:windowExitAnimation">@anim/zoom_out</item>
+    </style>
+
 </resources>
