--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -20,5 +20,10 @@
         android:menuCategory="secondary"
         android:title="@string/settings"
         app:showAsAction="ifRoom"/>
+    <item
+        android:id="@+id/about"
+        android:menuCategory="secondary"
+        android:title="@string/about"
+        app:showAsAction="never"/>
 
 </menu>
