--- a/res/menu/bookmarks.xml
+++ b/res/menu/bookmarks.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/filter"
         android:title="@string/filter"
-        app:showAsAction="always">
+        app:showAsAction="ifRoom">
         <menu>
             <item
                 android:id="@+id/upcoming_only"
