--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -7,7 +7,8 @@
         android:icon="@drawable/ic_action_search"
         android:menuCategory="secondary"
         android:title="@string/search_events"
-        app:showAsAction="ifRoom"/>
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="ifRoom|collapseActionView"/>
     <item
         android:id="@+id/refresh"
         android:icon="@drawable/ic_action_refresh"
