Load bookmark status asynchronously using a loader to ensure the UI thread is not blocked when the database is updating. The loader is notified of bookmarks status changes to deliver the new status immediately.

--- a/res/menu/event.xml
+++ b/res/menu/event.xml
@@ -4,6 +4,8 @@
 
     <item
         android:id="@+id/bookmark"
+        android:icon="@drawable/ic_action_not_important"
+        android:title="@string/add_bookmark"
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/share"
