--- a/res/layout/item_event.xml
+++ b/res/layout/item_event.xml
@@ -10,6 +10,7 @@
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:drawablePadding="6dp"
         android:textSize="@dimen/list_item_small_text_size"
         android:textStyle="bold" />
 
