--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <style name="AppTheme" parent="@style/Theme.AppCompat.Light">
@@ -11,6 +12,8 @@
         <item name="android:listViewStyle">@style/ListView.Fosdem</item>
         <item name="activatedBackgroundIndicator">@drawable/activated_background</item>
     </style>
+
+    <style name="DialogTheme" parent="@android:style/Theme.Dialog" />
 
     <style name="ActionBar.Solid.Fosdem" parent="@style/Widget.AppCompat.Light.ActionBar.Solid">
 
