Events in progress are now displayed with a contrasted background color for the time column in TrackScheduleListFragment.

--- a/res/layout/item_schedule_event.xml
+++ b/res/layout/item_schedule_event.xml
@@ -9,8 +9,9 @@
         android:id="@+id/time"
         android:layout_width="80dp"
         android:layout_height="match_parent"
-        android:background="@color/translucent_grey"
+        android:background="@color/schedule_time_background"
         android:padding="@dimen/list_item_padding"
+        android:textColor="@color/schedule_time_foreground"
         android:textSize="@dimen/list_item_small_text_size"
         android:textStyle="bold" />
 
