--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -11,6 +11,7 @@
         <item name="android:textViewStyle">@style/TextView.Fosdem</item>
         <item name="android:listViewStyle">@style/ListView.Fosdem</item>
         <item name="activatedBackgroundIndicator">@drawable/activated_background</item>
+        <item name="android:selectableItemBackground">@drawable/selectable_background</item>
     </style>
 
     <style name="DialogTheme" parent="@android:style/Theme.Dialog" />
