Use primary color instead of accent color for event details metadata background. This area will need more tweaks before final release.

--- a/app/src/main/res/layout/fragment_event_details.xml
+++ b/app/src/main/res/layout/fragment_event_details.xml
@@ -44,7 +44,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/fosdem_blue"
+            android:background="?attr/colorPrimary"
             android:orientation="vertical"
             android:paddingBottom="8dp"
             android:paddingLeft="@dimen/content_margin"
