--- a/app/src/main/res/layout/fragment_tracks.xml
+++ b/app/src/main/res/layout/fragment_tracks.xml
@@ -11,6 +11,7 @@
 
         <com.example.android.common.view.SlidingTabLayout
             android:id="@+id/sliding_tabs"
+            style="@style/SlidingTabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:elevation="@dimen/toolbar_elevation"/>
