--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -4,4 +4,13 @@
     <!-- Drawable used as a background for activated items. -->
     <attr name="activatedBackgroundIndicator" format="reference"/>
 
+    <declare-styleable name="SlidingTabLayout">
+        <attr name="theme"/>
+        <attr name="indicatorColor" format="color"/>
+        <attr name="indicatorHeight" format="reference|dimension"/>
+        <attr name="textColor" format="color"/>
+        <attr name="contentInsetStart"/>
+        <attr name="distributeEvenly" format="boolean"/>
+    </declare-styleable>
+
 </resources>
