--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -64,7 +64,7 @@
 
     <ProgressBar
         android:id="@+id/progress"
-        style="@style/ProgressBar.Fosdem"
+        style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
