--- a/app/src/main/res/layout/header_person_info.xml
+++ b/app/src/main/res/layout/header_person_info.xml
@@ -1,13 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="vertical">
-
-    <TextView
-        style="@style/Header"
-        android:text="@string/talks_header"/>
-
-    <View style="@style/HeaderLine"/>
-
-</LinearLayout>
+<TextView
+    style="@style/Header"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:text="@string/talks_header"/>
