--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,5 +10,6 @@
     <dimen name="list_item_small_text_size">14sp</dimen>
     <dimen name="content_margin">16dp</dimen>
     <dimen name="toolbar_elevation">8dp</dimen>
+    <dimen name="schedule_column_width">360dp</dimen>
 
 </resources>
