--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="fosdem_purple">#a91991</color>
-    <color name="fosdem_purple_dark">#76005e</color>
-    <color name="fosdem_blue">#3479c4</color>
+    <color name="color_primary">#a91991</color>
+    <color name="color_primary_dark">#76005e</color>
+    <color name="color_accent">#3479c4</color>
     <color name="fosdem_blue_translucent">#663479c4</color>
     <color name="secondary_text">#323232</color>
     <color name="main_menu_background">#fffafafa</color>
