--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,5 +11,8 @@
     <dimen name="content_margin">16dp</dimen>
     <dimen name="toolbar_elevation">8dp</dimen>
     <dimen name="schedule_column_width">360dp</dimen>
+    <dimen name="fab_diameter">56dp</dimen>
+    <dimen name="fab_elevation_low">2dp</dimen>
+    <dimen name="fab_elevation_high">4dp</dimen>
 
 </resources>
