--- a/app/src/main/res/drawable/fab_background.xml
+++ b/app/src/main/res/drawable/fab_background.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android"
-          android:enterFadeDuration="@android:integer/config_mediumAnimTime"
-          android:exitFadeDuration="@android:integer/config_mediumAnimTime">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/fab_background_highlighted" android:state_pressed="true"/>
     <item android:drawable="@drawable/fab_background_highlighted" android:state_focused="true"/>
     <item>
