--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -81,7 +81,7 @@
     <style name="SeparatorLine">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1dp</item>
-        <item name="android:background">@color/translucent_grey</item>
+        <item name="android:background">#e5e5e5</item>
     </style>
 
     <style name="Metadata" parent="TextAppearance.AppCompat.Subhead">
