--- a/app/src/main/res/layout-sw600dp-land/track_schedule.xml
+++ b/app/src/main/res/layout-sw600dp-land/track_schedule.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
 
@@ -13,7 +14,7 @@
             style="@style/Toolbar.Fosdem"
             android:layout_width="match_parent"
             android:layout_height="128dp"
-            android:elevation="2dp"
+            android:elevation="4dp"
             android:gravity="top"/>
 
         <FrameLayout
@@ -28,9 +29,11 @@
         android:id="@+id/event"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/schedule_column_width"
-        android:layout_marginRight="96dp"
-        android:layout_marginTop="64dp"/>
+        android:layout_marginBottom="@dimen/detail_card_view_margin_bottom"
+        android:layout_marginLeft="@dimen/detail_card_view_margin_left"
+        android:layout_marginRight="@dimen/detail_card_view_margin_right"
+        android:layout_marginTop="@dimen/detail_card_view_margin_top"
+        app:cardElevation="@dimen/detail_card_view_elevation"/>
 
     <ImageView
         android:id="@+id/fab"
