Move "Settings" and "About" from options menu to main menu footer.

--- a/app/src/main/res/layout/item_main_menu.xml
+++ b/app/src/main/res/layout/item_main_menu.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView
     android:id="@+id/section_text"
-    style="@style/TextAppearance.AppCompat.Body2"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/main_menu_item_height"
-    android:drawablePadding="@dimen/main_menu_drawable_padding"
-    android:gravity="left|center_vertical"
-    android:paddingLeft="@dimen/main_menu_padding"/>
+    style="@style/MainMenuItem"
+    xmlns:android="http://schemas.android.com/apk/res/android"/>
