Fix accuracy's jumps

--- a/app/src/unfree/res/layout/fragment_map.xml
+++ b/app/src/unfree/res/layout/fragment_map.xml
@@ -11,6 +11,7 @@
         />
     <FrameLayout
         android:id="@+id/ivPosition"
+        android:visibility="gone"
         android:background="@drawable/accuracy_background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -18,7 +19,7 @@
             android:layout_gravity="center"
             android:contentDescription="@string/your_position"
             android:src="@drawable/position"
-            android:layout_width="10dp"
-            android:layout_height="10dp" />
+            android:layout_width="@dimen/position_dot_size"
+            android:layout_height="@dimen/position_dot_size" />
     </FrameLayout>
 </FrameLayout>
