--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
+        android:id="@+id/ivMap"
         android:contentDescription="@string/menu_map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
