--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -2,12 +2,12 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ImageView
+    <be.digitalia.fosdem.maps.AspectRatioImageView
         android:id="@+id/ivMap"
+        android:layout_gravity="center"
         android:contentDescription="@string/menu_map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"
         android:src="@drawable/campusmap"
         />
     <FrameLayout
